Added explanations for how the encryption and decryptions methods work and how they are used. Fixed a typo on the catalan_decrypt method.

--- a/Catalan_Generator.ipynb
+++ b/Catalan_Generator.ipynb
@@ -232,6 +232,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How full text encryption is achieved\n",
+    "To be able to encrypt successfully we need a function that is deterministic in nature and is symmetrical to its counter-part. The encryption process is divided in different cases according to the relationship of the length of the key and the length of the text that is going to be encrypted.\n",
+    "Cases:\n",
+    "* if key pairs is less than or equal to the length of the text\n",
+    "    * if the key pairs fit exactly inside the length of the text\n",
+    "        * if the key pairs fit exactly inside the text, no further processing of the key is needed, and therefore the text is divided into segments of equal size to the amount of pairs in the key, these segments will be encrypted individually and summed up, it may be the case that the number of pairs and the length of the text are the same in which case, no segmebtation occurs.\n",
+    "    * if the key pairs don't fit exactly inside the length of the text\n",
+    "        * if the key pairs don't fit exactly inside, then that means there will be a residual segment left over. IE. len_text % half_key_len = 4, then there will be a residual of 4 characters left over to encrypt. This special segment requires special treatment and requires that a new sub_key is generated such that it will be able to encrypt it successfully.\n",
+    "* if key pairs is greater than the length of the text\n",
+    "    * if key pairs is greater than the length of the text, the key needs to be processed in order for a sub_key to be created using the retrieve_pairs method. This key will be the exact size of double the size of the text."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -267,6 +283,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How full text decryption is achieved\n",
+    "Since these two functions are symmetrical in nature they are the same in structure. The only difference is the usage of the keys and sub_keys they are used in the stack_decrypt method instead of the stack_encrypt method, which guarantees the encryption and decryption of the text or segments there of."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -296,8 +320,16 @@
     "      decyphered_text += special_segment_decyphered\n",
     "  elif half_key_len > len(cypher):\n",
     "    sub_key = retrieve_pairs(key, len(cypher))\n",
-    "    decyphered_text = stack_encrypt(cypher, sub_key)\n",
+    "    decyphered_text = stack_decrypt(cypher, sub_key)\n",
     "  return decyphered_text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How the text file is read\n",
+    "The text file is oppened as read-only and in binary format to be able to truly scramble and jumble the text and not just create an anagram of the original text. Another useful thing about using binary is that we assert that with the bytes we are reading the length of the full joined text will be even. Evenness assures that when the encrytion is ran no segment of odd size is left "
    ]
   },
   {
