Added explanations for how the encryption and decryptions methods work and how they are used. Fixed a typo on the catalan_decrypt method.

--- a/Catalan_Generator.ipynb
+++ b/Catalan_Generator.ipynb
@@ -329,7 +329,7 @@
    "metadata": {},
    "source": [
     "# How the text file is read\n",
-    "The text file is oppened as read-only and in binary format to be able to truly scramble and jumble the text and not just create an anagram of the original text. Another useful thing about using binary is that we assert that with the bytes we are reading the length of the full joined text will be even. Evenness assures that when the encrytion is ran no segment of odd size is left "
+    "The text file is oppened as read-only and in binary format to be able to truly scramble and jumble the text and not just create an anagram of the original text. Another useful thing about using binary is that we assert that with the bytes we are reading the length of the full joined text will be even. Evenness assures that when the encrytion is ran no segment of odd size is left over that can't be encrypted or decrypted using the stack encrypt and decrypt methods. To read the file byte by byte we unpack each byte in binary format using the unpack method from struct."
    ]
   },
   {
